[gd_scene load_steps=17 format=2]

[ext_resource path="res://Images/tie.png" type="Texture" id=1]
[ext_resource path="res://Menu/PaletteMosaic-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/buttonFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Menu/Background Image.jpg" type="Texture" id=4]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://MainGame/MainGame.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 0.490196 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 0.686275 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.999004, 0.978562 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 7 )
MainGameScene = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -626.622
margin_top = 5.10938
margin_right = 1933.38
margin_bottom = 1445.11
rect_rotation = 0.0190807
texture = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1281.0
margin_bottom = 764.0
rect_scale = Vector2( 1.00024, 0.963026 )

[node name="Layout" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1281.0
margin_bottom = 764.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space Invaders 2023" type="Label" parent="MarginContainer/Layout"]
margin_right = 1281.0
margin_bottom = 117.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "Space Invaders 2023"
align = 1
valign = 1

[node name="Main" type="HBoxContainer" parent="MarginContainer/Layout"]
margin_top = 121.0
margin_right = 1281.0
margin_bottom = 746.0
size_flags_vertical = 3
alignment = 1

[node name="SpaceInvaderLogo" type="TextureRect" parent="MarginContainer/Layout/Main"]
margin_right = 351.0
margin_bottom = 625.0
size_flags_vertical = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="ButtonHolder" type="VBoxContainer" parent="MarginContainer/Layout/Main"]
margin_left = 355.0
margin_right = 1281.0
margin_bottom = 625.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1

[node name="StartGame" type="Button" parent="MarginContainer/Layout/Main/ButtonHolder"]
margin_right = 926.0
margin_bottom = 201.0
focus_neighbour_top = NodePath("../Quit")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
action_mode = 0
text = "Start Game"

[node name="Options" type="Button" parent="MarginContainer/Layout/Main/ButtonHolder"]
margin_top = 211.0
margin_right = 926.0
margin_bottom = 413.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
action_mode = 0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MarginContainer/Layout/Main/ButtonHolder"]
margin_top = 423.0
margin_right = 926.0
margin_bottom = 625.0
focus_neighbour_bottom = NodePath("../StartGame")
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
action_mode = 0
text = "Quit"

[node name="Credits" type="HBoxContainer" parent="MarginContainer/Layout"]
margin_top = 750.0
margin_right = 1281.0
margin_bottom = 764.0

[node name="Copyright Ryan Cather 2022" type="Label" parent="MarginContainer/Layout/Credits"]
margin_right = 179.0
margin_bottom = 14.0
text = "Copyright Ryan Cather 2022."

[connection signal="pressed" from="MarginContainer/Layout/Main/ButtonHolder/StartGame" to="." method="_on_Start_Game_Button_pressed"]
[connection signal="pressed" from="MarginContainer/Layout/Main/ButtonHolder/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/Layout/Main/ButtonHolder/Quit" to="." method="_on_Quit_pressed"]
